# Microsoft_code_a_thon

./: pyproject.toml
Backend/: README.md  ats.py  llm_prompt.txt  main.py
backend/: data.db  main.py
backend/core/: config.py
backend/database/: models.py
backend/round1/: ats_evaluator.py  resume_parser.py  routes.py  service.py
backend/round2/: code_runner.py  routes.py  websocket.py
backend/round3/: routes.py  scenario_engine.py  service.py
backend/utils/: helpers.py
