[project]
name = "microsoft-agent-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.10.5",
    "chromadb>=1.4.1",
    "crewai>=0.193.2",
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "langgraph>=1.0.7",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pyautogui>=0.9.54",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "sentence-transformers>=5.2.2",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
]
